<resources>

    <string name="app_name">BASEline</string>
    <string name="app_name_long">BASEline Flight Computer</string>

    <!-- Home Screen -->
    <string name="action_record">Record</string>
    <string name="action_stop">Stop</string>
    <string name="action_audible">Audible</string>
    <string name="action_altimeter">Alti</string>
    <string name="action_map">Map</string>
    <string name="action_tracks">Tracks</string>
    <string name="action_profiles">Profiles</string>
    <string name="action_settings">Settings</string>

    <!-- Track Activity -->
    <string name="menu">Menu</string>
    <string name="action_open">baseline.ws</string>
    <string name="action_earth">Earth</string>
    <string name="action_delete">Delete</string>
    <string name="action_export">Export</string>

    <string name="upload_waiting">Waiting for upload…</string>
    <string name="uploading">Uploading…</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading…</string>
    <string name="search">Search…</string>

    <string name="download_failed">Track download failed</string>

    <string name="delete_local">Are you sure you want to delete this track from the local device? It has not been synced online yet.</string>
    <string name="delete_remote">Are you sure you want to delete this track from BASEline?</string>

    <string name="error_export_intent">Failed to export track file</string>
    <string name="error_map_intent">Failed to open google earth</string>

    <string name="chart_altitude">altitude</string>
    <string name="chart_speed">speed</string>
    <string name="chart_glide">glide</string>

    <!-- Auth -->
    <string name="signin_prompt">Sign in with google to sync tracks with\nhttps://baseline.ws/</string>
    <string name="signin_success">Signed in</string>
    <string name="signin_failed">Sign in failed</string>
    <string name="signout_success">Signed out</string>

    <string name="no_tracks">no tracks</string>

    <string-array name="audible_modes">
        <item>Horizontal Speed</item>
        <item>Vertical Speed</item>
        <item>Total Speed</item>
        <item>Glide Ratio</item>
        <item>Navigation</item>
    </string-array>
    <string-array name="audible_modes_values">
        <item>horizontal_speed</item>
        <item>vertical_speed</item>
        <item>total_speed</item>
        <item>glide_ratio</item>
        <item>navigation</item>
    </string-array>

    <!-- Audible settings -->
    <string name="title_activity_audible_settings">Audible Settings</string>

    <string name="error_audible_not_available">Audible error: text-to-speech not available</string>

    <string name="pref_audible_enabled">Enable audible</string>
    <string name="pref_audible_enabled_description">Enable audible feedback</string>
    <string name="pref_audible_quiet">Airplane mode</string>
    <string name="pref_audible_quiet_description">Quiet during plane ride</string>

    <string name="pref_audible_mode">Measurement mode</string>

    <string name="pref_audible_min">Minimum value</string>
    <string name="pref_audible_max">Maximum value</string>

    <string name="pref_audible_precision">Precision</string>
    <string name="pref_audible_interval">Speech interval</string>
    <string name="pref_audible_rate">Speech rate</string>

    <!-- Map -->
    <string name="title_activity_map">Navigation</string>
    <string name="map_crosshair">crosshair</string>
    <string name="map_pin">pin</string>
    <string name="layers">Layers</string>

    <!-- Bluetooth -->
    <string name="title_activity_bluetooth">GPS Device</string>
    <string name="title_activity_ble">BLE GPS Device</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="internal_gps">Phone GPS</string>
    <string name="pref_location">GPS Device</string>
    <string name="pref_location_description">Configure bluetooth GPS device</string>
    <string name="bluetooth_devices">Devices</string>
    <string name="bluetooth_pair">Pair</string>
    <string name="ble_scan">BLE Scan</string>
    <string name="error_bluetooth_intent">Failed to open bluetooth settings</string>
    <string name="bluetooth_selected">Selected</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_metric">Metric</string>
    <string name="pref_metric_description">Use metric units</string>
    <string name="pref_auto_stop">Auto-Stop</string>
    <string name="pref_auto_stop_description">Stop logging and audible on landing</string>
    <string name="pref_barometer">Barometer</string>
    <string name="pref_barometer_description">Use barometric altimeter</string>
    <string name="pref_audible_settings">Audible settings</string>
    <string name="pref_audible_settings_description">Configure audible options</string>
    <string name="pref_sensor_info">Sensor info</string>
    <string name="pref_sensor_info_description">Display raw sensor data</string>
    <string name="pref_sign_in">Sign in</string>
    <string name="pref_sign_in_description">Sign in with your google account</string>
    <string name="pref_sign_out">Sign out</string>
    <string name="pref_sign_out_description">Sign out</string>
    <string name="pref_help">Help</string>
    <string name="pref_help_description">BASEline user manual</string>
    <string name="pref_privacy">Privacy</string>
    <string name="pref_privacy_description">BASEline privacy policy</string>

    <!-- Notifications -->
    <string name="notify_audible">Audible enabled</string>
    <string name="notify_audible_logging">Audible enabled, logging data</string>
    <string name="notify_logging">Logging data</string>

    <!-- Laser -->
    <string name="tracks">Tracks</string>
    <string name="profiles">Profiles</string>
    <string name="new_profile">New Profile</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_location">Latitude, longitude, altitude</string>
    <string name="clear">Clear</string>
    <string name="sort">Sort</string>
    <string name="save">Save</string>
    <string name="bottom">bottom</string>
    <string name="quadrant">quadrant</string>
    <string name="rangefinder_connect">Enable bluetooth rangefinder</string>
    <string name="rangefinder_connected">Rangefinder connected</string>
    <string name="rangefinder_connecting">Rangefinder connecting…</string>
    <string name="rangefinder_searching">Searching for rangefinder…</string>
    <string-array name="metric_modes">
        <item>Meters</item>
        <item>Feet</item>
    </string-array>
    <string-array name="metric_modes_values">
        <item>meters</item>
        <item>feet</item>
    </string-array>
    <string name="help_profiles">
        <![CDATA[
Compare track data against terrain profiles from known exit points.

Chart shows horizontal and vertical distance from the start point.

https://baseline.ws/help#app-profiles
        ]]>
    </string>

    <!-- Errors -->
    <string name="error_open_browser">Failed to open browser</string>

</resources>
