<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="metric_enabled"
        android:summary="@string/pref_metric_description"
        android:title="@string/pref_metric"
        android:defaultValue="false"/>

    <SwitchPreference
        android:key="auto_stop_enabled"
        android:summary="@string/pref_auto_stop_description"
        android:title="@string/pref_auto_stop"
        android:defaultValue="true"/>

    <SwitchPreference
        android:key="barometer_enabled"
        android:summary="@string/pref_barometer_description"
        android:title="@string/pref_barometer"
        android:defaultValue="true"/>

    <Preference
        android:key="audible_settings"
        android:widgetLayout="@layout/icon_audio"
        android:title="@string/pref_audible_settings"
        android:summary="@string/pref_audible_settings_description"/>

    <Preference
        android:key="bluetooth_settings"
        android:widgetLayout="@layout/icon_bluetooth_off"
        android:summary="@string/pref_location_description"
        android:title="@string/pref_location"/>

    <Preference
        android:key="sensor_info"
        android:title="@string/pref_sensor_info"
        android:summary="@string/pref_sensor_info_description"/>

    <Preference
        android:key="sign_in"
        android:title="@string/pref_sign_in"
        android:summary="@string/pref_sign_in_description"/>

    <Preference
        android:key="help_page"
        android:title="@string/pref_help"
        android:summary="@string/pref_help_description"/>

    <Preference
        android:key="privacy_page"
        android:title="@string/pref_privacy"
        android:summary="@string/pref_privacy_description"/>

</PreferenceScreen>
