<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="audible_enabled"
        android:title="@string/pref_audible_enabled"
        android:summary="@string/pref_audible_enabled_description" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="audible_quiet"
        android:title="@string/pref_audible_quiet"
        android:summary="@string/pref_audible_quiet_description" />

    <ListPreference
        android:key="audible_mode"
        android:title="@string/pref_audible_mode"
        android:defaultValue="horizontal_speed"
        android:entries="@array/audible_modes"
        android:entryValues="@array/audible_modes_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <com.platypii.baseline.audible.AudibleMinMaxPreference
        android:key="audible_min"
        android:title="@string/pref_audible_min" />

    <com.platypii.baseline.audible.AudibleMinMaxPreference
        android:key="audible_max"
        android:title="@string/pref_audible_max" />

    <EditTextPreference
        android:key="audible_precision"
        android:title="@string/pref_audible_precision"
        android:defaultValue="1"
        android:inputType="number"
        android:numeric="integer"
        android:selectAllOnFocus="true" />

    <EditTextPreference
        android:key="audible_interval"
        android:title="@string/pref_audible_interval"
        android:defaultValue="2.5"
        android:inputType="numberDecimal"
        android:numeric="decimal"
        android:selectAllOnFocus="true" />

    <EditTextPreference
        android:key="audible_rate"
        android:title="@string/pref_audible_rate"
        android:defaultValue="1.0"
        android:inputType="numberDecimal"
        android:numeric="decimal"
        android:selectAllOnFocus="true" />

</PreferenceScreen>
