<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.MainActivity"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/circle"
            android:text="@string/action_record"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/audible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/audio_on"
            android:text="@string/action_audible"
            style="@style/Widget.AppCompat.Button.Borderless" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/alti"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/alti"
            android:text="@string/action_altimeter"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/nav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/nav"
            android:text="@string/action_map"
            style="@style/Widget.AppCompat.Button.Borderless" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tracks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/list"
            android:text="@string/action_tracks"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/profiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/profiles"
            android:text="@string/action_profiles"
            style="@style/Widget.AppCompat.Button.Borderless" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/flysight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/button_flysight"
            android:text="@string/action_flysight"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/gears"
            android:text="@string/action_settings"
            style="@style/Widget.AppCompat.Button.Borderless" />

    </LinearLayout>

    <include
        android:id="@+id/info_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        layout="@layout/info_panel"/>

</LinearLayout>
