<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ff333333"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="end">

    <Button
        android:id="@+id/openButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="6dp"
        android:drawableEnd="@drawable/browser"
        android:text="@string/action_open"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="6dp"
        android:drawableEnd="@drawable/google_earth"
        android:text="@string/action_earth"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:id="@+id/augmentedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableEnd="@drawable/button_eye"
        android:text="@string/action_augmented"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="6dp"
        android:drawableEnd="@drawable/button_delete"
        android:text="@string/action_delete"
        style="@style/Widget.AppCompat.Button.Borderless" />

</LinearLayout>
