<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.platypii.baseline.TrackActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/trackDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#dddddd" />

    <TextView
        android:id="@+id/trackLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/openButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:onClick="clickOpen"
            android:drawableTop="@drawable/browser"
            android:text="@string/action_open"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:onClick="clickDelete"
            android:drawableTop="@drawable/button_delete"
            android:text="@string/action_delete"
            style="@style/Widget.AppCompat.Button.Borderless" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mapButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:onClick="clickKml"
            android:drawableTop="@drawable/google_earth"
            android:text="@string/action_map"
            style="@style/Widget.AppCompat.Button.Borderless" />

    </LinearLayout>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/warning"
        android:drawableStart="@drawable/warning"
        android:textColor="#aa0000"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone" />

</LinearLayout>
